--- a/Gesture Recogniser/Base.lproj/Main.storyboard
+++ b/Gesture Recogniser/Base.lproj/Main.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +12,89 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Gesture_Recogniser" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="forest" translatesAutoresizingMaskIntoConstraints="NO" id="LNH-xt-yAR">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
+                            <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="banana" translatesAutoresizingMaskIntoConstraints="NO" id="xtJ-xO-Z0o">
+                                <rect key="frame" x="263" y="239" width="50" height="81"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="5bs-j3-upQ" appends="YES" id="oEV-S8-bMx"/>
+                                    <outletCollection property="gestureRecognizers" destination="5X1-lY-ZvM" appends="YES" id="siV-tG-cUj"/>
+                                    <outletCollection property="gestureRecognizers" destination="Kom-Ni-eIJ" appends="YES" id="jsp-dJ-z8j"/>
+                                </connections>
+                            </imageView>
+                            <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="monkey" translatesAutoresizingMaskIntoConstraints="NO" id="ZDk-HE-cRV">
+                                <rect key="frame" x="16" y="68" width="93" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="UEw-CP-7Yt" appends="YES" id="q1Z-AV-g8K"/>
+                                    <outletCollection property="gestureRecognizers" destination="AeJ-0G-x21" appends="YES" id="EBH-cL-coK"/>
+                                    <outletCollection property="gestureRecognizers" destination="rRy-rF-tkv" appends="YES" id="Wfn-dy-iAO"/>
+                                </connections>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LNH-xt-yAR" secondAttribute="trailing" id="2au-9y-Pgz"/>
+                            <constraint firstItem="LNH-xt-yAR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="4WZ-zl-0xV"/>
+                            <constraint firstItem="LNH-xt-yAR" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="XS0-yl-UQz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="LNH-xt-yAR" secondAttribute="bottom" id="gd7-hU-HaF"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="UEw-CP-7Yt" userLabel="Monkey Pan Gesture Recognizer">
+                    <connections>
+                        <action selector="handlePan:" destination="BYZ-38-t0r" id="nCK-i5-4yp"/>
+                        <outlet property="delegate" destination="BYZ-38-t0r" id="Qlp-fP-Q4M"/>
+                    </connections>
+                </panGestureRecognizer>
+                <pinchGestureRecognizer id="AeJ-0G-x21" userLabel="Monkey Pinch Gesture Recognizer">
+                    <connections>
+                        <action selector="handlePinch:" destination="BYZ-38-t0r" id="q0Z-GX-3aK"/>
+                        <outlet property="delegate" destination="BYZ-38-t0r" id="D9z-VU-mmJ"/>
+                    </connections>
+                </pinchGestureRecognizer>
+                <rotationGestureRecognizer id="rRy-rF-tkv" userLabel="Monkey Rotation Gesture Recognizer">
+                    <connections>
+                        <action selector="handleRotate:" destination="BYZ-38-t0r" id="zV7-x8-tIU"/>
+                        <outlet property="delegate" destination="BYZ-38-t0r" id="KFa-bc-MWr"/>
+                    </connections>
+                </rotationGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="5bs-j3-upQ" userLabel="Banana Pan Gesture Recognizer">
+                    <connections>
+                        <action selector="handlePan:" destination="BYZ-38-t0r" id="eOw-y6-yHf"/>
+                        <outlet property="delegate" destination="BYZ-38-t0r" id="r5s-Xh-46b"/>
+                    </connections>
+                </panGestureRecognizer>
+                <pinchGestureRecognizer id="5X1-lY-ZvM" userLabel="Banana Pinch Gesture Recognizer">
+                    <connections>
+                        <action selector="handlePinch:" destination="BYZ-38-t0r" id="dfA-mp-87p"/>
+                        <outlet property="delegate" destination="BYZ-38-t0r" id="LEU-OL-Tw6"/>
+                    </connections>
+                </pinchGestureRecognizer>
+                <rotationGestureRecognizer id="Kom-Ni-eIJ" userLabel="Banana Rotation Gesture Recognizer">
+                    <connections>
+                        <action selector="handleRotate:" destination="BYZ-38-t0r" id="HwV-D0-WGP"/>
+                        <outlet property="delegate" destination="BYZ-38-t0r" id="S6L-9K-97d"/>
+                    </connections>
+                </rotationGestureRecognizer>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="132.68365817091455"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="banana" width="1305" height="2650"/>
+        <image name="forest" width="4000" height="6000"/>
+        <image name="monkey" width="2167" height="3001"/>
+    </resources>
 </document>
